menambahkan komponen transparan

--- a/css/ulostyle.css
+++ b/css/ulostyle.css
@@ -19,914 +19,686 @@
  \*********************************************************************************/
 .latar-us-merah-gelap-1 {
   background-color: #ea1c0d;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merah-terang-1 {
   background-color: #f77066;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merah-gelap-2 {
   background-color: #ba160a;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merah-terang-2 {
   background-color: #f99d97;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merah-gelap-3 {
   background-color: #891008;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merah-terang-3 {
   background-color: #fccbc7;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merah-gelap-4 {
   background-color: #590b05;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merah-terang-4 {
   background-color: #fff8f7;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-merah {
+  background-color: #f44336;
 }
 
 .latar-us-merahjambu-gelap-1 {
   background-color: #c1134e;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merahjambu-terang-1 {
   background-color: #ee4c83;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merahjambu-gelap-2 {
   background-color: #930e3b;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merahjambu-terang-2 {
   background-color: #f27ba3;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merahjambu-gelap-3 {
   background-color: #640a29;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merahjambu-terang-3 {
   background-color: #f7a9c4;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merahjambu-gelap-4 {
   background-color: #360516;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-merahjambu-terang-4 {
   background-color: #fbd8e4;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-merahjambu {
+  background-color: #e91e63;
 }
 
 .latar-us-ungu-gelap-1 {
   background-color: #771e86;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungu-terang-1 {
   background-color: #bc37d3;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungu-gelap-2 {
   background-color: #52145d;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungu-terang-2 {
   background-color: #ca61dc;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungu-gelap-3 {
   background-color: #2d0b33;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungu-terang-3 {
   background-color: #d88be5;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungu-gelap-4 {
   background-color: #080209;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungu-terang-4 {
   background-color: #e6b5ee;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-ungu {
+  background-color: #9c27b0;
 }
 
 .latar-us-ungupekat-gelap-1 {
   background-color: #512e90;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungupekat-terang-1 {
   background-color: #8259cb;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungupekat-gelap-2 {
   background-color: #3b216a;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungupekat-terang-2 {
   background-color: #9f80d7;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungupekat-gelap-3 {
   background-color: #261543;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungupekat-terang-3 {
   background-color: #bda7e3;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungupekat-gelap-4 {
   background-color: #10091c;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-ungupekat-terang-4 {
   background-color: #daceef;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-ungupekat {
+  background-color: #673ab7;
 }
 
 .latar-us-indigo-gelap-1 {
   background-color: #32408f;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-indigo-terang-1 {
   background-color: #606fc7;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-indigo-gelap-2 {
   background-color: #252f69;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-indigo-terang-2 {
   background-color: #8591d5;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-indigo-gelap-3 {
   background-color: #171e44;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-indigo-terang-3 {
   background-color: #abb4e2;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-indigo-gelap-4 {
   background-color: #0a0d1e;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-indigo-terang-4 {
   background-color: #d1d6ef;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-indigo {
+  background-color: #3f51b5;
 }
 
 .latar-us-biru-gelap-1 {
   background-color: #0c7cd5;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-biru-terang-1 {
   background-color: #51adf6;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-biru-gelap-2 {
   background-color: #0960a5;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-biru-terang-2 {
   background-color: #82c4f8;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-biru-gelap-3 {
   background-color: #064475;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-biru-terang-3 {
   background-color: #b2dbfb;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-biru-gelap-4 {
   background-color: #042844;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-biru-terang-4 {
   background-color: #e3f2fd;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-biru {
+  background-color: #2196f3;
 }
 
 .latar-us-birumuda-gelap-1 {
   background-color: #0286c2;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-birumuda-terang-1 {
   background-color: #2ebcfc;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-birumuda-gelap-2 {
   background-color: #02638f;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-birumuda-terang-2 {
   background-color: #60ccfd;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-birumuda-gelap-3 {
   background-color: #01405d;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-birumuda-terang-3 {
   background-color: #92dcfe;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-birumuda-gelap-4 {
   background-color: #011d2a;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-birumuda-terang-4 {
   background-color: #c5ecfe;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-birumuda {
+  background-color: #03a9f4;
 }
 
 .latar-us-cyan-gelap-1 {
   background-color: #008fa1;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cyan-terang-1 {
   background-color: #08e3ff;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cyan-gelap-2 {
   background-color: #00626e;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cyan-terang-2 {
   background-color: #3be9ff;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cyan-gelap-3 {
   background-color: #00343b;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cyan-terang-3 {
   background-color: #6eefff;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cyan-gelap-4 {
   background-color: #000708;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cyan-terang-4 {
   background-color: #a1f4ff;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-cyan {
+  background-color: #00bcd4;
 }
 
 .latar-us-teal-gelap-1 {
   background-color: #00635a;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-teal-terang-1 {
   background-color: #00c9b6;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-teal-gelap-2 {
   background-color: #00302c;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-teal-terang-2 {
   background-color: #00fce4;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-teal-gelap-3 {
   background-color: black;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-teal-terang-3 {
   background-color: #30ffec;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-teal-gelap-4 {
   background-color: black;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-teal-terang-4 {
   background-color: #63fff0;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-teal {
+  background-color: #009688;
 }
 
 .latar-us-hijau-gelap-1 {
   background-color: #3d8b40;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijau-terang-1 {
   background-color: #6ec071;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijau-gelap-2 {
   background-color: #2d682f;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijau-terang-2 {
   background-color: #92cf94;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijau-gelap-3 {
   background-color: #1e441f;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijau-terang-3 {
   background-color: #b5dfb7;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijau-gelap-4 {
   background-color: #0e210f;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijau-terang-4 {
   background-color: #d9eeda;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-hijau {
+  background-color: #4caf50;
 }
 
 .latar-us-hijaumuda-gelap-1 {
   background-color: #71a436;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijaumuda-terang-1 {
   background-color: #a4d070;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijaumuda-gelap-2 {
   background-color: #577d2a;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijaumuda-terang-2 {
   background-color: #bcdc97;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijaumuda-gelap-3 {
   background-color: #3c571d;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijaumuda-terang-3 {
   background-color: #d5e9bd;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijaumuda-gelap-4 {
   background-color: #223110;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-hijaumuda-terang-4 {
   background-color: #edf6e3;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-hijaumuda {
+  background-color: #8bc34a;
 }
 
 .latar-us-lemon-gelap-1 {
   background-color: #b2c022;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-lemon-terang-1 {
   background-color: #d8e464;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-lemon-gelap-2 {
   background-color: #89951a;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-lemon-terang-2 {
   background-color: #e3eb90;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-lemon-gelap-3 {
   background-color: #616913;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-lemon-terang-3 {
   background-color: #eef3bb;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-lemon-gelap-4 {
   background-color: #393e0b;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-lemon-terang-4 {
   background-color: #f9fbe6;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-lemon {
+  background-color: #cddc39;
 }
 
 .latar-us-kuning-gelap-1 {
   background-color: #ffe608;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-kuning-terang-1 {
   background-color: #fff06e;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-kuning-gelap-2 {
   background-color: #d4be00;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-kuning-terang-2 {
   background-color: #fff5a1;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-kuning-gelap-3 {
   background-color: #a19100;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-kuning-terang-3 {
   background-color: #fffbd4;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-kuning-gelap-4 {
   background-color: #6e6300;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-kuning-terang-4 {
   background-color: white;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-kuning {
+  background-color: #ffeb3b;
 }
 
 .latar-us-amber-gelap-1 {
   background-color: #d39e00;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-amber-terang-1 {
   background-color: #ffce3a;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-amber-gelap-2 {
   background-color: #a07800;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-amber-terang-2 {
   background-color: #ffdb6d;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-amber-gelap-3 {
   background-color: #6d5200;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-amber-terang-3 {
   background-color: #ffe7a0;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-amber-gelap-4 {
   background-color: #3a2c00;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-amber-terang-4 {
   background-color: #fff4d3;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-amber {
+  background-color: #ffc107;
 }
 
 .latar-us-jingga-gelap-1 {
   background-color: #cc7a00;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jingga-terang-1 {
   background-color: #ffad33;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jingga-gelap-2 {
   background-color: #995b00;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jingga-terang-2 {
   background-color: #ffc166;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jingga-gelap-3 {
   background-color: #663d00;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jingga-terang-3 {
   background-color: #ffd699;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jingga-gelap-4 {
   background-color: #331e00;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jingga-terang-4 {
   background-color: #ffeacc;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-jingga {
+  background-color: #ff9800;
 }
 
 .latar-us-jinggapekat-gelap-1 {
   background-color: #ee3900;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jinggapekat-terang-1 {
   background-color: #ff7e55;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jinggapekat-gelap-2 {
   background-color: #bb2d00;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jinggapekat-terang-2 {
   background-color: #ffa588;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jinggapekat-gelap-3 {
   background-color: #882100;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jinggapekat-terang-3 {
   background-color: #ffcbbb;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jinggapekat-gelap-4 {
   background-color: #551400;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-jinggapekat-terang-4 {
   background-color: #fff2ee;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-jinggapekat {
+  background-color: #ff5722;
 }
 
 .latar-us-cokelat-gelap-1 {
   background-color: #593f35;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cokelat-terang-1 {
   background-color: #996b5b;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cokelat-gelap-2 {
   background-color: #392822;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cokelat-terang-2 {
   background-color: #af8778;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cokelat-gelap-3 {
   background-color: #19120f;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cokelat-terang-3 {
   background-color: #c2a398;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cokelat-gelap-4 {
   background-color: black;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-cokelat-terang-4 {
   background-color: #d5c0b8;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-cokelat {
+  background-color: #795548;
 }
 
 .latar-us-abuabu-gelap-1 {
   background-color: #858585;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabu-terang-1 {
   background-color: #b8b8b8;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabu-gelap-2 {
   background-color: #6b6b6b;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabu-terang-2 {
   background-color: #d1d1d1;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabu-gelap-3 {
   background-color: #525252;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabu-terang-3 {
   background-color: #ebebeb;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabu-gelap-4 {
   background-color: #383838;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabu-terang-4 {
   background-color: white;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-abuabu {
+  background-color: #9e9e9e;
 }
 
 .latar-us-abuabubiru-gelap-1 {
   background-color: #4b626d;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabubiru-terang-1 {
   background-color: #7b96a3;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabubiru-gelap-2 {
   background-color: #36474f;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabubiru-terang-2 {
   background-color: #99aeb8;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabubiru-gelap-3 {
   background-color: #212c31;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabubiru-terang-3 {
   background-color: #b7c6cd;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabubiru-gelap-4 {
   background-color: #0d1012;
-  width: 300px;
-  height: 50px;
 }
 
 .latar-us-abuabubiru-terang-4 {
   background-color: #d5dee2;
-  width: 300px;
-  height: 50px;
+}
+
+.latar-us-abuabubiru {
+  background-color: #607d8b;
 }
 
 :root {
@@ -1188,6 +960,42 @@ p {
 
 * {
   box-sizing: border-box;
+}
+
+.transparan-90 {
+  opacity: 0.1;
+}
+
+.transparan-80 {
+  opacity: 0.2;
+}
+
+.transparan-70 {
+  opacity: 0.3;
+}
+
+.transparan-60 {
+  opacity: 0.4;
+}
+
+.transparan-50 {
+  opacity: 0.5;
+}
+
+.transparan-40 {
+  opacity: 0.6;
+}
+
+.transparan-30 {
+  opacity: 0.7;
+}
+
+.transparan-20 {
+  opacity: 0.8;
+}
+
+.transparan-10 {
+  opacity: 0.9;
 }
 
 * {
