--- a/css/ulostyle.css
+++ b/css/ulostyle.css
@@ -292,6 +292,10 @@ p {
   border-color: #f44336;
 }
 
+.teks-neon-us-merah {
+  text-shadow: 3px 3px 7px #f44336;
+}
+
 .latar-us-merahjambu-gelap-1 {
   background-color: #c1134e;
 }
@@ -330,6 +334,10 @@ p {
 
 .warna-garis-us-merahjambu {
   border-color: #e91e63;
+}
+
+.teks-neon-us-merahjambu {
+  text-shadow: 3px 3px 7px #e91e63;
 }
 
 .latar-us-ungu-gelap-1 {
@@ -372,6 +380,10 @@ p {
   border-color: #9c27b0;
 }
 
+.teks-neon-us-ungu {
+  text-shadow: 3px 3px 7px #9c27b0;
+}
+
 .latar-us-ungupekat-gelap-1 {
   background-color: #512e90;
 }
@@ -410,6 +422,10 @@ p {
 
 .warna-garis-us-ungupekat {
   border-color: #673ab7;
+}
+
+.teks-neon-us-ungupekat {
+  text-shadow: 3px 3px 7px #673ab7;
 }
 
 .latar-us-indigo-gelap-1 {
@@ -452,6 +468,10 @@ p {
   border-color: #3f51b5;
 }
 
+.teks-neon-us-indigo {
+  text-shadow: 3px 3px 7px #3f51b5;
+}
+
 .latar-us-biru-gelap-1 {
   background-color: #0c7cd5;
 }
@@ -490,6 +510,10 @@ p {
 
 .warna-garis-us-biru {
   border-color: #2196f3;
+}
+
+.teks-neon-us-biru {
+  text-shadow: 3px 3px 7px #2196f3;
 }
 
 .latar-us-birumuda-gelap-1 {
@@ -532,6 +556,10 @@ p {
   border-color: #03a9f4;
 }
 
+.teks-neon-us-birumuda {
+  text-shadow: 3px 3px 7px #03a9f4;
+}
+
 .latar-us-cyan-gelap-1 {
   background-color: #008fa1;
 }
@@ -570,6 +598,10 @@ p {
 
 .warna-garis-us-cyan {
   border-color: #00bcd4;
+}
+
+.teks-neon-us-cyan {
+  text-shadow: 3px 3px 7px #00bcd4;
 }
 
 .latar-us-teal-gelap-1 {
@@ -612,6 +644,10 @@ p {
   border-color: #009688;
 }
 
+.teks-neon-us-teal {
+  text-shadow: 3px 3px 7px #009688;
+}
+
 .latar-us-hijau-gelap-1 {
   background-color: #3d8b40;
 }
@@ -650,6 +686,10 @@ p {
 
 .warna-garis-us-hijau {
   border-color: #4caf50;
+}
+
+.teks-neon-us-hijau {
+  text-shadow: 3px 3px 7px #4caf50;
 }
 
 .latar-us-hijaumuda-gelap-1 {
@@ -692,6 +732,10 @@ p {
   border-color: #8bc34a;
 }
 
+.teks-neon-us-hijaumuda {
+  text-shadow: 3px 3px 7px #8bc34a;
+}
+
 .latar-us-lemon-gelap-1 {
   background-color: #b2c022;
 }
@@ -730,6 +774,10 @@ p {
 
 .warna-garis-us-lemon {
   border-color: #cddc39;
+}
+
+.teks-neon-us-lemon {
+  text-shadow: 3px 3px 7px #cddc39;
 }
 
 .latar-us-kuning-gelap-1 {
@@ -772,6 +820,10 @@ p {
   border-color: #ffeb3b;
 }
 
+.teks-neon-us-kuning {
+  text-shadow: 3px 3px 7px #ffeb3b;
+}
+
 .latar-us-amber-gelap-1 {
   background-color: #d39e00;
 }
@@ -810,6 +862,10 @@ p {
 
 .warna-garis-us-amber {
   border-color: #ffc107;
+}
+
+.teks-neon-us-amber {
+  text-shadow: 3px 3px 7px #ffc107;
 }
 
 .latar-us-jingga-gelap-1 {
@@ -852,6 +908,10 @@ p {
   border-color: #ff9800;
 }
 
+.teks-neon-us-jingga {
+  text-shadow: 3px 3px 7px #ff9800;
+}
+
 .latar-us-jinggapekat-gelap-1 {
   background-color: #ee3900;
 }
@@ -890,6 +950,10 @@ p {
 
 .warna-garis-us-jinggapekat {
   border-color: #ff5722;
+}
+
+.teks-neon-us-jinggapekat {
+  text-shadow: 3px 3px 7px #ff5722;
 }
 
 .latar-us-cokelat-gelap-1 {
@@ -932,6 +996,10 @@ p {
   border-color: #795548;
 }
 
+.teks-neon-us-cokelat {
+  text-shadow: 3px 3px 7px #795548;
+}
+
 .latar-us-abuabu-gelap-1 {
   background-color: #858585;
 }
@@ -972,6 +1040,10 @@ p {
   border-color: #9e9e9e;
 }
 
+.teks-neon-us-abuabu {
+  text-shadow: 3px 3px 7px #9e9e9e;
+}
+
 .latar-us-abuabubiru-gelap-1 {
   background-color: #4b626d;
 }
@@ -1010,6 +1082,10 @@ p {
 
 .warna-garis-us-abuabubiru {
   border-color: #607d8b;
+}
+
+.teks-neon-us-abuabubiru {
+  text-shadow: 3px 3px 7px #607d8b;
 }
 
 :root {
@@ -19620,6 +19696,98 @@ p {
 
 .teks-garis-bawah {
   text-decoration: underline;
+}
+
+.teks-spasi-1 {
+  text-indent: 10px;
+}
+
+.teks-spasi-2 {
+  text-indent: 20px;
+}
+
+.teks-spasi-3 {
+  text-indent: 30px;
+}
+
+.teks-spasi-4 {
+  text-indent: 40px;
+}
+
+.teks-spasi-5 {
+  text-indent: 50px;
+}
+
+.teks-spasi-6 {
+  text-indent: 60px;
+}
+
+.teks-spasi-7 {
+  text-indent: 70px;
+}
+
+.teks-spasi-8 {
+  text-indent: 80px;
+}
+
+.teks-spasi-9 {
+  text-indent: 90px;
+}
+
+.teks-spasi-100 {
+  text-indent: 100px;
+}
+
+.teks-spasi-huruf-1 {
+  letter-spacing: 1px;
+}
+
+.teks-spasi-huruf-2 {
+  letter-spacing: 2px;
+}
+
+.teks-spasi-huruf-3 {
+  letter-spacing: 3px;
+}
+
+.teks-spasi-huruf-4 {
+  letter-spacing: 4px;
+}
+
+.teks-spasi-huruf-5 {
+  letter-spacing: 5px;
+}
+
+.teks-spasi-huruf-6 {
+  letter-spacing: 6px;
+}
+
+.teks-spasi-huruf-7 {
+  letter-spacing: 7px;
+}
+
+.teks-spasi-huruf-8 {
+  letter-spacing: 8px;
+}
+
+.teks-spasi-huruf-9 {
+  letter-spacing: 9px;
+}
+
+.teks-spasi-huruf-10 {
+  letter-spacing: 10px;
+}
+
+.teks-spasi-huruf-min-1 {
+  letter-spacing: -1px;
+}
+
+.teks-spasi-huruf-min-2 {
+  letter-spacing: -2px;
+}
+
+.teks-spasi-huruf-min-3 {
+  letter-spacing: -3px;
 }
 
 .teks-besar-xxl {
