--- a/css/ulostyle.css
+++ b/css/ulostyle.css
@@ -296,6 +296,10 @@ p {
   text-shadow: 3px 3px 7px #f44336;
 }
 
+.teks-bayang-us-merah {
+  text-shadow: 2px 2px #f44336;
+}
+
 .latar-us-merahjambu-gelap-1 {
   background-color: #c1134e;
 }
@@ -338,6 +342,10 @@ p {
 
 .teks-neon-us-merahjambu {
   text-shadow: 3px 3px 7px #e91e63;
+}
+
+.teks-bayang-us-merahjambu {
+  text-shadow: 2px 2px #e91e63;
 }
 
 .latar-us-ungu-gelap-1 {
@@ -384,6 +392,10 @@ p {
   text-shadow: 3px 3px 7px #9c27b0;
 }
 
+.teks-bayang-us-ungu {
+  text-shadow: 2px 2px #9c27b0;
+}
+
 .latar-us-ungupekat-gelap-1 {
   background-color: #512e90;
 }
@@ -426,6 +438,10 @@ p {
 
 .teks-neon-us-ungupekat {
   text-shadow: 3px 3px 7px #673ab7;
+}
+
+.teks-bayang-us-ungupekat {
+  text-shadow: 2px 2px #673ab7;
 }
 
 .latar-us-indigo-gelap-1 {
@@ -472,6 +488,10 @@ p {
   text-shadow: 3px 3px 7px #3f51b5;
 }
 
+.teks-bayang-us-indigo {
+  text-shadow: 2px 2px #3f51b5;
+}
+
 .latar-us-biru-gelap-1 {
   background-color: #0c7cd5;
 }
@@ -514,6 +534,10 @@ p {
 
 .teks-neon-us-biru {
   text-shadow: 3px 3px 7px #2196f3;
+}
+
+.teks-bayang-us-biru {
+  text-shadow: 2px 2px #2196f3;
 }
 
 .latar-us-birumuda-gelap-1 {
@@ -560,6 +584,10 @@ p {
   text-shadow: 3px 3px 7px #03a9f4;
 }
 
+.teks-bayang-us-birumuda {
+  text-shadow: 2px 2px #03a9f4;
+}
+
 .latar-us-cyan-gelap-1 {
   background-color: #008fa1;
 }
@@ -602,6 +630,10 @@ p {
 
 .teks-neon-us-cyan {
   text-shadow: 3px 3px 7px #00bcd4;
+}
+
+.teks-bayang-us-cyan {
+  text-shadow: 2px 2px #00bcd4;
 }
 
 .latar-us-teal-gelap-1 {
@@ -648,6 +680,10 @@ p {
   text-shadow: 3px 3px 7px #009688;
 }
 
+.teks-bayang-us-teal {
+  text-shadow: 2px 2px #009688;
+}
+
 .latar-us-hijau-gelap-1 {
   background-color: #3d8b40;
 }
@@ -690,6 +726,10 @@ p {
 
 .teks-neon-us-hijau {
   text-shadow: 3px 3px 7px #4caf50;
+}
+
+.teks-bayang-us-hijau {
+  text-shadow: 2px 2px #4caf50;
 }
 
 .latar-us-hijaumuda-gelap-1 {
@@ -736,6 +776,10 @@ p {
   text-shadow: 3px 3px 7px #8bc34a;
 }
 
+.teks-bayang-us-hijaumuda {
+  text-shadow: 2px 2px #8bc34a;
+}
+
 .latar-us-lemon-gelap-1 {
   background-color: #b2c022;
 }
@@ -778,6 +822,10 @@ p {
 
 .teks-neon-us-lemon {
   text-shadow: 3px 3px 7px #cddc39;
+}
+
+.teks-bayang-us-lemon {
+  text-shadow: 2px 2px #cddc39;
 }
 
 .latar-us-kuning-gelap-1 {
@@ -824,6 +872,10 @@ p {
   text-shadow: 3px 3px 7px #ffeb3b;
 }
 
+.teks-bayang-us-kuning {
+  text-shadow: 2px 2px #ffeb3b;
+}
+
 .latar-us-amber-gelap-1 {
   background-color: #d39e00;
 }
@@ -866,6 +918,10 @@ p {
 
 .teks-neon-us-amber {
   text-shadow: 3px 3px 7px #ffc107;
+}
+
+.teks-bayang-us-amber {
+  text-shadow: 2px 2px #ffc107;
 }
 
 .latar-us-jingga-gelap-1 {
@@ -912,6 +968,10 @@ p {
   text-shadow: 3px 3px 7px #ff9800;
 }
 
+.teks-bayang-us-jingga {
+  text-shadow: 2px 2px #ff9800;
+}
+
 .latar-us-jinggapekat-gelap-1 {
   background-color: #ee3900;
 }
@@ -954,6 +1014,10 @@ p {
 
 .teks-neon-us-jinggapekat {
   text-shadow: 3px 3px 7px #ff5722;
+}
+
+.teks-bayang-us-jinggapekat {
+  text-shadow: 2px 2px #ff5722;
 }
 
 .latar-us-cokelat-gelap-1 {
@@ -1000,6 +1064,10 @@ p {
   text-shadow: 3px 3px 7px #795548;
 }
 
+.teks-bayang-us-cokelat {
+  text-shadow: 2px 2px #795548;
+}
+
 .latar-us-abuabu-gelap-1 {
   background-color: #858585;
 }
@@ -1044,6 +1112,10 @@ p {
   text-shadow: 3px 3px 7px #9e9e9e;
 }
 
+.teks-bayang-us-abuabu {
+  text-shadow: 2px 2px #9e9e9e;
+}
+
 .latar-us-abuabubiru-gelap-1 {
   background-color: #4b626d;
 }
@@ -1086,6 +1158,10 @@ p {
 
 .teks-neon-us-abuabubiru {
   text-shadow: 3px 3px 7px #607d8b;
+}
+
+.teks-bayang-us-abuabubiru {
+  text-shadow: 2px 2px #607d8b;
 }
 
 :root {
@@ -19788,6 +19864,14 @@ p {
 
 .teks-spasi-huruf-min-3 {
   letter-spacing: -3px;
+}
+
+.teks-bayang-hitam-us-hitam {
+  text-shadow: 2px 2px;
+}
+
+.teks-bayang-putih-us-putih {
+  text-shadow: 2px 2px #fff;
 }
 
 .teks-besar-xxl {
