--- a/css/ulostyle.css
+++ b/css/ulostyle.css
@@ -300,6 +300,29 @@ a {
   text-shadow: 3px 3px 7px #f44336;
 }
 
+.gaya-tabel-1-us-merah {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-merah td,
+.gaya-tabel-1-us-merah th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-merah tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-merah tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-merah th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #f44336;
+  color: #f8feff;
+}
+
 .teks-bayang-us-merah {
   text-shadow: 2px 2px #f44336;
 }
@@ -346,6 +369,29 @@ a {
 
 .teks-neon-us-merahjambu {
   text-shadow: 3px 3px 7px #e91e63;
+}
+
+.gaya-tabel-1-us-merahjambu {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-merahjambu td,
+.gaya-tabel-1-us-merahjambu th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-merahjambu tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-merahjambu tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-merahjambu th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #e91e63;
+  color: #f8feff;
 }
 
 .teks-bayang-us-merahjambu {
@@ -396,6 +442,29 @@ a {
   text-shadow: 3px 3px 7px #9c27b0;
 }
 
+.gaya-tabel-1-us-ungu {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-ungu td,
+.gaya-tabel-1-us-ungu th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-ungu tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-ungu tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-ungu th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #9c27b0;
+  color: #f8feff;
+}
+
 .teks-bayang-us-ungu {
   text-shadow: 2px 2px #9c27b0;
 }
@@ -442,6 +511,29 @@ a {
 
 .teks-neon-us-ungupekat {
   text-shadow: 3px 3px 7px #673ab7;
+}
+
+.gaya-tabel-1-us-ungupekat {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-ungupekat td,
+.gaya-tabel-1-us-ungupekat th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-ungupekat tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-ungupekat tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-ungupekat th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #673ab7;
+  color: #f8feff;
 }
 
 .teks-bayang-us-ungupekat {
@@ -492,6 +584,29 @@ a {
   text-shadow: 3px 3px 7px #3f51b5;
 }
 
+.gaya-tabel-1-us-indigo {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-indigo td,
+.gaya-tabel-1-us-indigo th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-indigo tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-indigo tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-indigo th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #3f51b5;
+  color: #f8feff;
+}
+
 .teks-bayang-us-indigo {
   text-shadow: 2px 2px #3f51b5;
 }
@@ -538,6 +653,29 @@ a {
 
 .teks-neon-us-biru {
   text-shadow: 3px 3px 7px #2196f3;
+}
+
+.gaya-tabel-1-us-biru {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-biru td,
+.gaya-tabel-1-us-biru th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-biru tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-biru tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-biru th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #2196f3;
+  color: #f8feff;
 }
 
 .teks-bayang-us-biru {
@@ -588,6 +726,29 @@ a {
   text-shadow: 3px 3px 7px #03a9f4;
 }
 
+.gaya-tabel-1-us-birumuda {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-birumuda td,
+.gaya-tabel-1-us-birumuda th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-birumuda tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-birumuda tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-birumuda th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #03a9f4;
+  color: #f8feff;
+}
+
 .teks-bayang-us-birumuda {
   text-shadow: 2px 2px #03a9f4;
 }
@@ -634,6 +795,29 @@ a {
 
 .teks-neon-us-cyan {
   text-shadow: 3px 3px 7px #00bcd4;
+}
+
+.gaya-tabel-1-us-cyan {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-cyan td,
+.gaya-tabel-1-us-cyan th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-cyan tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-cyan tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-cyan th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #00bcd4;
+  color: #f8feff;
 }
 
 .teks-bayang-us-cyan {
@@ -684,6 +868,29 @@ a {
   text-shadow: 3px 3px 7px #009688;
 }
 
+.gaya-tabel-1-us-teal {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-teal td,
+.gaya-tabel-1-us-teal th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-teal tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-teal tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-teal th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #009688;
+  color: #f8feff;
+}
+
 .teks-bayang-us-teal {
   text-shadow: 2px 2px #009688;
 }
@@ -730,6 +937,29 @@ a {
 
 .teks-neon-us-hijau {
   text-shadow: 3px 3px 7px #4caf50;
+}
+
+.gaya-tabel-1-us-hijau {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-hijau td,
+.gaya-tabel-1-us-hijau th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-hijau tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-hijau tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-hijau th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4caf50;
+  color: #f8feff;
 }
 
 .teks-bayang-us-hijau {
@@ -780,6 +1010,29 @@ a {
   text-shadow: 3px 3px 7px #8bc34a;
 }
 
+.gaya-tabel-1-us-hijaumuda {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-hijaumuda td,
+.gaya-tabel-1-us-hijaumuda th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-hijaumuda tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-hijaumuda tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-hijaumuda th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #8bc34a;
+  color: #f8feff;
+}
+
 .teks-bayang-us-hijaumuda {
   text-shadow: 2px 2px #8bc34a;
 }
@@ -826,6 +1079,30 @@ a {
 
 .teks-neon-us-lemon {
   text-shadow: 3px 3px 7px #cddc39;
+}
+
+.gaya-tabel-1-us-lemon {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-lemon td,
+.gaya-tabel-1-us-lemon th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-lemon tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-lemon tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-lemon th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #cddc39;
+  color: #f8feff;
+  color: #212529;
 }
 
 .teks-bayang-us-lemon {
@@ -876,6 +1153,30 @@ a {
   text-shadow: 3px 3px 7px #ffeb3b;
 }
 
+.gaya-tabel-1-us-kuning {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-kuning td,
+.gaya-tabel-1-us-kuning th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-kuning tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-kuning tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-kuning th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ffeb3b;
+  color: #f8feff;
+  color: #212529;
+}
+
 .teks-bayang-us-kuning {
   text-shadow: 2px 2px #ffeb3b;
 }
@@ -922,6 +1223,30 @@ a {
 
 .teks-neon-us-amber {
   text-shadow: 3px 3px 7px #ffc107;
+}
+
+.gaya-tabel-1-us-amber {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-amber td,
+.gaya-tabel-1-us-amber th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-amber tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-amber tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-amber th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ffc107;
+  color: #f8feff;
+  color: #212529;
 }
 
 .teks-bayang-us-amber {
@@ -972,6 +1297,29 @@ a {
   text-shadow: 3px 3px 7px #ff9800;
 }
 
+.gaya-tabel-1-us-jingga {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-jingga td,
+.gaya-tabel-1-us-jingga th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-jingga tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-jingga tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-jingga th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ff9800;
+  color: #f8feff;
+}
+
 .teks-bayang-us-jingga {
   text-shadow: 2px 2px #ff9800;
 }
@@ -1018,6 +1366,29 @@ a {
 
 .teks-neon-us-jinggapekat {
   text-shadow: 3px 3px 7px #ff5722;
+}
+
+.gaya-tabel-1-us-jinggapekat {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-jinggapekat td,
+.gaya-tabel-1-us-jinggapekat th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-jinggapekat tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-jinggapekat tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-jinggapekat th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ff5722;
+  color: #f8feff;
 }
 
 .teks-bayang-us-jinggapekat {
@@ -1068,6 +1439,29 @@ a {
   text-shadow: 3px 3px 7px #795548;
 }
 
+.gaya-tabel-1-us-cokelat {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-cokelat td,
+.gaya-tabel-1-us-cokelat th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-cokelat tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-cokelat tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-cokelat th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #795548;
+  color: #f8feff;
+}
+
 .teks-bayang-us-cokelat {
   text-shadow: 2px 2px #795548;
 }
@@ -1116,6 +1510,30 @@ a {
   text-shadow: 3px 3px 7px #9e9e9e;
 }
 
+.gaya-tabel-1-us-abuabu {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-abuabu td,
+.gaya-tabel-1-us-abuabu th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-abuabu tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-abuabu tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-abuabu th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #9e9e9e;
+  color: #f8feff;
+  color: #212529;
+}
+
 .teks-bayang-us-abuabu {
   text-shadow: 2px 2px #9e9e9e;
 }
@@ -1162,6 +1580,29 @@ a {
 
 .teks-neon-us-abuabubiru {
   text-shadow: 3px 3px 7px #607d8b;
+}
+
+.gaya-tabel-1-us-abuabubiru {
+  border-collapse: collapse;
+  width: 100%;
+}
+.gaya-tabel-1-us-abuabubiru td,
+.gaya-tabel-1-us-abuabubiru th {
+  border: 1px solid #9e9e9e;
+  padding: 8px;
+}
+.gaya-tabel-1-us-abuabubiru tr:nth-child {
+  background-color: #f8feff;
+}
+.gaya-tabel-1-us-abuabubiru tr:hover {
+  background-color: #9e9e9e;
+}
+.gaya-tabel-1-us-abuabubiru th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #607d8b;
+  color: #f8feff;
 }
 
 .teks-bayang-us-abuabubiru {
